--- a/20251118_pracownicy.html
+++ b/20251118_pracownicy.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nasz zespół</title>
     <link rel="stylesheet" href="20251118_styl.css">
-    <link rel="icon" href="https://res.cloudinary.com/diljpkw9f/image/upload/v1764095013/logo_rs4xfm.png">
+    <link rel="icon" href="dawi108.png" type="image/png">
+    <script src="script.js"></script>
 </head>
 <body>
     <header>
