--- a/20251106_index.html
+++ b/20251106_index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fryzjerstwo</title>
+    <link rel="icon" href="dawi108.png" type="image/png">
+    <script src="script.js"></script>
     <link rel="stylesheet" href="20251106_styl8.css">
 </head>
 <body>
