--- a/20251104_tabelka.html
+++ b/20251104_tabelka.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelki 1</title>
-    <link rel="icon" href="dawi108.png">
+    <link rel="icon" href="dawi108.png" type="image/png">
+    <script src="script.js"></script>
     <style>
         table, th, td{
             border: 1px solid black;
