--- a/20251104_bloki6.html
+++ b/20251104_bloki6.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sprawdzian Poprawa</title>
     <link rel="stylesheet" href="20251104_bloki6.css">
-    <link rel="icon" href="dawi108.png">
+    <link rel="icon" href="dawi108.png" type="image/png">
+    <script src="script.js"></script>
 </head>
 <body>
     <main></main>
