--- a/20251103_bloki5.html
+++ b/20251103_bloki5.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bloki Sprawdzian</title>
     <link rel="stylesheet" href="20251103_bloki5.css">
-    <link rel="icon" href="https://res.cloudinary.com/diljpkw9f/image/upload/v1762191954/bloki5_brc6x6.png">
+    <link rel="icon" href="dawi108.png" type="image/png">
+    <script src="script.js"></script>
 </head>
 <body>
     <div id="lewy">
