--- a/20251101_historia.html
+++ b/20251101_historia.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quiz Historyczny XIX wiek</title>
-    <link rel="icon" href="dawi108.png">
+<link rel="icon" href="dawi108.png" type="image/png">
+<script src="script.js"></script>
 <style>
     body {
         background: linear-gradient(135deg, #1e3c72, #2a5298);
