--- a/20251031_chemia.html
+++ b/20251031_chemia.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quiz o Węglu</title>
-    <link rel="icon" href="dawi108.png">
+<link rel="icon" href="dawi108.png" type="image/png">
+<script src="script.js"></script>
 <style>
 body {
     font-family: Arial, sans-serif;
