--- a/20251028_obrazki.html
+++ b/20251028_obrazki.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Efekty obrazu</title>
     <link rel="stylesheet" href="20251028_styl.css">
+    <link rel="icon" href="dawi108.png" type="image/png">
+    <script src="script.js"></script>
 </head>
 <body>
     <header>
