--- a/20251021_formaty.html
+++ b/20251021_formaty.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formatowanie</title>
     <link rel="stylesheet" href="20251021_styl2.css">
-    <link rel="icon" href="dawi108.png">
+    <link rel="icon" href="dawi108.png" type="image/png">
+    <script src="script.js"></script>
 </head>
 <body>
     <header>
