--- a/20251018_cel100km.html
+++ b/20251018_cel100km.html
@@ -3,6 +3,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Plan 100 km - Kalendarz i Porady</title>
+  <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
   <style>
     body {
       font-family: 'Poppins', Arial, sans-serif;
