--- a/20251015_kolo.html
+++ b/20251015_kolo.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pole i Obwód Koła</title>
+  <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
   <style>
 body {
   font-family: 'Segoe UI', sans-serif;
