--- a/20251009_galeria2.html
+++ b/20251009_galeria2.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria</title>
     <link rel="stylesheet" href="20251009_styl7.css">
-    <link rel="icon" href="https://res.cloudinary.com/diljpkw9f/image/upload/v1761316409/favicon_ob9i7b.png">
+    <link rel="icon" href="dawi108.png" type="image/png">
+    <script src="script.js"></script>
 </head>
 <body>
     <header>
