--- a/20251008_randint.html
+++ b/20251008_randint.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Zgadnij liczbę (0–10)</title>
+  <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
   <style>
     :root{
       --bg1:#0f172a; /* dark navy */
