--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-    <h1>Dawid</h1>
+    <h1 id="punkty"></h1>
         <div class="buttons">
             <a href="20250809_goldrun.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1754815264/goldrun_fayrn5.png" alt="Gold Run">
@@ -54,6 +54,10 @@
             </a>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script>
+        let dawid108 = localStorage.getItem("dawid108") || 0;
+        let punkty = document.getElementById("punkty");
+        punkty.innerHTML = "Punkty: " + dawid108;
+    </script>
 </body>
 </html>
