--- a/20250927_turniej.html
+++ b/20250927_turniej.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Turniej Ministrantów w Piłce Nożnej</title>
+<link rel="icon" href="dawi108.png" type="image/png">
+<script src="script.js"></script>
 <style>
   /* --- Ogólny styl i layout --- */
   :root{
