--- a/20250925_angielski.html
+++ b/20250925_angielski.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nauka Angielskiego</title>
+  <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
