--- a/20250924_oblicz.html
+++ b/20250924_oblicz.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kalkulator w stylu terminala</title>
+  <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
   <style>
     body {
       background-color: #1e1e1e;
