--- a/20250919_notatki.html
+++ b/20250919_notatki.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aplikacja Notatki</title>
+  <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
   <link rel="stylesheet" href="20250919_style.css">
 </head>
 <body>
