--- a/20250917_funkcje.html
+++ b/20250917_funkcje.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Funkcje Tekstu</title>
   <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
