--- a/20250917_barca.html
+++ b/20250917_barca.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Newcastle - Barcelona</title>
     <link rel="icon" href="dawi108.png" type="image/png">
+    <script src="script.js"></script>
     <style>
         body {
             width: 350px;
