--- a/20250910_szyfrcezara2.html
+++ b/20250910_szyfrcezara2.html
@@ -3,6 +3,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Szyfr Cezara — wersja obiektowa + Python</title>
+  <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
   <style>
     :root {
       --bg: #f4f6fb;
