--- a/20250910_szyfrcezara.html
+++ b/20250910_szyfrcezara.html
@@ -3,6 +3,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Szyfr Cezara — prosty enkoder</title>
+  <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
   <style>
     :root{--bg:#f6f8fa;--card:#ffffff;--accent:#2b7a78;--muted:#6b6b6b;--radius:12px}
     *{box-sizing:border-box;font-family:Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial}
