--- a/20250909_formularz.html
+++ b/20250909_formularz.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formularz</title>
     <link rel="icon" href="dawi108.png" type="image/png">
-    <style>
-        
-    </style>
+    <script src="script.js"></script>
 </head>
 <body>
     <form>
