--- a/20250908_pozytywizm.html
+++ b/20250908_pozytywizm.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Pozytywizm</title>
+  <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
   <style>
     :root{
       --bg:#fbfbfd; --card:#ffffff; --accent:#2b7a78; --muted:#6b6b6b; --glass: rgba(43,122,120,0.06);
