--- a/20250902_zdarzenia.html
+++ b/20250902_zdarzenia.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zdarzenia</title>
+    <link rel="icon" href="dawi108.png" type="image/png">
+    <script src="script.js"></script>
     <style>
         div{
             width: 25px;
