--- a/20250830_testy.html
+++ b/20250830_testy.html
@@ -4,8 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>INF03 – Testy</title>
-    <link rel="icon" href="dawi108.png" type="image/png">
-    <link rel="manifest" href="20250830_testy.json">
+  <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
+  <link rel="manifest" href="20250830_testy.json">
   <style>
     :root{
       --bg:#0f1226; /* przyjemne, ciemne tło */
