--- a/20250827_zpuchar.html
+++ b/20250827_zpuchar.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Zwycięscy Pucharu</title>
+  <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
   <style>
     :root{
       --bg:#f7fafc;
