--- a/20250827_zekstraklasa.html
+++ b/20250827_zekstraklasa.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Zwycięscy Ekstraklasy</title>
+  <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
   <style>
     /* ====== Prosty, przyjemny styl – mobil first ====== */
     :root{
