--- a/20250827_twligapucharowa.html
+++ b/20250827_twligapucharowa.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Tabela Wszechczasów Ligi Pucharowej</title>
+<link rel="icon" href="dawi108.png" type="image/png">
+<script src="script.js"></script>
 <style>
   :root{
     --bg:#f5f8fb;
