--- a/20250827_ekstraklasa2425.html
+++ b/20250827_ekstraklasa2425.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>Liga piłkarska (24 drużyny) – sezon 24/25</title>
+  <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
 <style>
     :root{
       --bg:#0f172a; /* slate-900 */
