--- a/20250827_ekstraklasa2021.html
+++ b/20250827_ekstraklasa2021.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ekstraklasa 2021</title>
+<link rel="icon" href="dawi108.png" type="image/png">
+<script src="script.js"></script>
 <style>
     body {
         font-family: Arial, sans-serif;
