--- a/20250826_losoweturnieje.html
+++ b/20250826_losoweturnieje.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Losowe Turnieje Piłkarskie</title>
+<link rel="icon" href="dawi108.png" type="image/png">
+<script src="script.js"></script>
 <style>
   :root{
     --bg:#0f1724;
