--- a/20250823_sierpien.html
+++ b/20250823_sierpien.html
@@ -3,6 +3,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Liga Sierpniowa</title>
+  <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
   <style>
     :root {
       --bg: #0f172a;           /* granat / tło */
