--- a/20250827_pilka.html
+++ b/20250827_pilka.html
@@ -73,7 +73,7 @@
     <header>Piłka Nożna</header>
 
     <div class="container">
-        <a href="20250829_liga.html" class="link-block">Liga 2025/2026</a>
+        <a href="index.html" class="link-block">Liga 2025/2026</a>
         <a href="20250824_puchar.html" class="link-block">Puchar 2025/2026</a>
         <a href="20250826_losoweturnieje.html" class="link-block">Losowe Turnieje</a>
         <a href="20250827_twekstraklasa.html" class="link-block">Tabela Wszechczasów Ekstraklasy</a>
