--- a/20250815_usmieszki.html
+++ b/20250815_usmieszki.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>Zgadywanie emotek</title>
   <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
   <link rel="manifest" href="manifest.json">
   <style>
     :root{
