--- a/20250813_stoper.html
+++ b/20250813_stoper.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Kolorowy Stoper</title>
+  <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
