--- a/20250813_poop.html
+++ b/20250813_poop.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
-  <title>💩 Poop Dodger</title>
+  <title>Poop Dodger</title>
+  <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
   <style>
     :root{
       --bg1:#0f1020; --bg2:#16182e; --acc1:#7c5cff; --acc2:#19d3da; --glass:rgba(255,255,255,.08);
