--- a/20250813_piesek.html
+++ b/20250813_piesek.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Piesek — opiekuj się 🐶</title>
+  <title>Piesek — opiekuj się</title>
+  <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
   <style>
     :root{
       --bg: #f7f7ff;
