--- a/20250809_ufo.html
+++ b/20250809_ufo.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1" />
   <title>Ufo — gra</title>
+  <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
   <link rel="stylesheet" href="20250809_style.css">
 </head>
 <body>
