--- a/20250809_goldrun.html
+++ b/20250809_goldrun.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>Gold Run</title>
+  <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
   <link rel="stylesheet" href="20250809_grstyle.css">
 </head>
 <body>
