--- a/20250731_madera.html
+++ b/20250731_madera.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Ordery Madery</title>
-   <link rel="icon" href="20250801_madera.png" type="image/png">
+  <link rel="icon" href="20250801_madera.png" type="image/png">
+  <script src="script.js"></script>
   <link rel="manifest" href="20250731_manifest.json">
   <style>
     body {
