--- a/20250703_norwegia.html
+++ b/20250703_norwegia.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Norwegia</title>
-    <link rel="icon" href="dawi108.png" type="image/png">
+  <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
   <link rel="manifest" href="https://dawid108.github.io/dawi108/20250704_manifest.json">
-<meta name="theme-color" content="#003153">
+  <meta name="theme-color" content="#003153">
   <style>
     body {
       margin: 0;
