--- a/20250622_karty.html
+++ b/20250622_karty.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Karty Dawida</title>
-    <link rel="icon" href="dawi108.png" type="image/png">
-    <link rel="manifest" href="manifest.json">
+  <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
+  <link rel="manifest" href="manifest.json">
   <style>
     body {
       font-family: 'Arial', sans-serif;
