--- a/20250618_ucieczka.html
+++ b/20250618_ucieczka.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ucieczka</title>
     <link rel="icon" href="dawi108.png" type="image/png">
+    <script src="script.js"></script>
     <link rel="manifest" href="manifest.json">
     <style>
         body {
@@ -99,6 +100,7 @@
     </div>
 
     <script>
+        let dawid108 = localStorage.getItem("dawid108") || 0;
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
         const scoreDisplay = document.getElementById('scoreDisplay');
@@ -201,6 +203,9 @@
             blocks = blocks.filter(block => {
                 if (block.y > canvas.height) {
                     score++;
+                    dawid108++;
+                    localStorage.setItem("dawid108", dawid108);
+                    console.log("dawid108:", dawid108);
                     return false;
                 }
                 return true;
