--- a/20250617_kolofortuny.html
+++ b/20250617_kolofortuny.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Koło Fortuny</title>
-    <link rel="icon" href="dawi108.png" type="image/png">
-    <link rel="manifest" href="manifest.json">
+  <link rel="icon" href="dawi108.png" type="image/png">
+  <script src="script.js"></script>
+  <link rel="manifest" href="manifest.json">
   <style>
     body {
       font-family: Arial, sans-serif;
