--- a/20250514_tablice4.html
+++ b/20250514_tablice4.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width>, initial-scale=1.0">
     <title>Tablice 3</title>
+    <link rel="icon" href="dawi108.png" type="image/png">
+    <script src="script.js"></script>
 </head>
 <body>
     <h1>Tablice Dwuwymiarowe 2</h1>
