--- a/20250415_formularzkontaktowy.html
+++ b/20250415_formularzkontaktowy.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>PAI</title>
+		<link rel="icon" href="dawi108.png" type="image/png">
+		<script src="script.js"></script>
 	</head>
 	<body>
 		<h1>Formularz kontaktowy wysyłajacy mail</h1>
