--- a/20250326_dowhile3.html
+++ b/20250326_dowhile3.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Do While</title>
+	<link rel="icon" href="dawi108.png" type="image/png">
+	<script src="script.js"></script>
 </head>
 <body>
 	<script>
