--- a/20250304_formularze.html
+++ b/20250304_formularze.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Formularze</title>
+        <link rel="icon" href="dawi108.png" type="image/png">
+        <script src="script.js"></script>
     </head>
     <body>
         <h2>Wstwaianie Tekstu</h2>
