--- a/20250304_for4.html
+++ b/20250304_for4.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>for 4</title>
+        <link rel="icon" href="dawi108.png" type="image/png">
+        <script src="script.js"></script>
     </head>
     <body>
         <h1>For 4</h1>
