--- a/20251130_gry.html
+++ b/20251130_gry.html
@@ -47,6 +47,24 @@
             </a>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script>
+// ===== PRZENIESIENIE DANYCH DO INFINITYFREE =====
+(function () {
+    let punkty = localStorage.getItem("dawid108");
+    let historia = localStorage.getItem("historia108");
+
+    if (punkty === null) return;
+
+    let url = "https://dawid108.infinityfree.me/receive.html"
+        + "?punkty=" + encodeURIComponent(punkty)
+        + "&historia=" + encodeURIComponent(historia || "[]");
+
+    // tylko zapis – bez zapętlenia
+    if (!sessionStorage.getItem("sentToInfinity")) {
+        sessionStorage.setItem("sentToInfinity", "1");
+        window.location.href = url;
+    }
+})();
+    </script>
 </body>
 </html>
