--- a/20251130_gry.html
+++ b/20251130_gry.html
@@ -51,13 +51,11 @@
 // ===== PRZENIESIENIE DANYCH DO INFINITYFREE =====
 (function () {
     let punkty = localStorage.getItem("dawid108");
-    let historia = localStorage.getItem("historia108");
 
     if (punkty === null) return;
 
     let url = "https://dawid108.infinityfree.me/receive.html"
-        + "?punkty=" + encodeURIComponent(punkty)
-        + "&historia=" + encodeURIComponent(historia || "[]");
+        + "?punkty=" + encodeURIComponent(punkty);
 
     // tylko zapis – bez zapętlenia
     if (!sessionStorage.getItem("sentToInfinity")) {
