--- a/20251202_listy.html
+++ b/20251202_listy.html
@@ -156,7 +156,7 @@
                 <li></li>
             </ol>
             <ol class="upper-roman">
-                <li>lower-alpha</li>
+                <li>upper-roman</li>
                 <li></li>
                 <li></li>
             </ol>
