--- a/20250226_tekst1.html
+++ b/20250226_tekst1.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Tekst</title>
+        <link rel="icon" href="dawi108.png" type="image/png">
+        <script src="script.js"></script>
         <style>
             h1{
                 font-size: 70px;
