--- a/20250219_kalkulatorBMI2.html
+++ b/20250219_kalkulatorBMI2.html
@@ -3,6 +3,8 @@
     <head>
         <title>Kalkulator BMI</title>
         <meta charset="UTF-8">
+        <link rel="icon" href="dawi108.png" type="image/png">
+        <script src="script.js"></script>
         <style>
             body{
                 text-align: center;
