--- a/20250219_for3.html
+++ b/20250219_for3.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>For 3</title>
+        <link rel="icon" href="dawi108.png" type="image/png">
+        <script src="script.js"></script>
     </head>
     <body>
         <h1>Instrukcja FOR zagnieżdżona</h1>
