--- a/20250218_tabelka.html
+++ b/20250218_tabelka.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Tabelka</title>
+        <link rel="icon" href="dawi108.png" type="image/png">
+        <script src="script.js"></script>
         <style>
             body{
                 text-align: center;
