--- a/20250211_for.html
+++ b/20250211_for.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Instrukcja FOR</title>
+        <link rel="icon" href="dawi108.png" type="image/png">
+        <script src="script.js"></script>
     </head>
     <body>
         <h3>Instrukcja FOR - cyfry</h3>
