--- a/20250116_25XD.html
+++ b/20250116_25XD.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="icon" href="dawi108.png" type="image/png">
-    <link rel="manifest" href="manifest.json">
+    <script src="script.js"></script>
 </head>
 <body>
     <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750105820/obrazek_ll8rtb.jpg"><br><br>
