--- a/20241211_ifelse3.html
+++ b/20241211_ifelse3.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Instrukcja warunkowa 2</title>
+    <link rel="icon" href="dawi108.png" type="image/png">
+    <script src="script.js"></script>
 </head>
 
 <body>
