--- a/20241204_ifelse2.html
+++ b/20241204_ifelse2.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Instrukcja warunkowa</title>
+        <link rel="icon" href="dawi108.png" type="image/png">
+        <script src="script.js"></script>
     </head>
     <body>
         <h1>Instrukcja Warunkowa</h1>
