--- a/20241128_gradient.html
+++ b/20241128_gradient.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Gradient</title>
+        <link rel="icon" href="dawi108.png" type="image/png">
+        <script src="script.js"></script>
         <style>
             div{
                 height: 200px;
