--- a/20241127_obiekty.html
+++ b/20241127_obiekty.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Obiekty</title>
+        <link rel="icon" href="dawi108.png" type="image/png">
+        <script src="script.js"></script>
         <style>
             table{
                 border-collapse: collapse;
