--- a/20241127_ifelse.html
+++ b/20241127_ifelse.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link rel="icon" href="dawi108.png" type="image/png">
+        <script src="script.js"></script>
     </head>
     <body>
         <script>
