--- a/20241127_ifelse.html
+++ b/20241127_ifelse.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <title>Żwirek i Muchomorek</title>
         <link rel="icon" href="dawi108.png" type="image/png">
         <script src="script.js"></script>
     </head>
