--- a/20241122_pai.html
+++ b/20241122_pai.html
@@ -2,6 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Zadanie1</title>
+        <link rel="icon" href="dawi108.png" type="image/png">
+        <script src="script.js"></script>
         <style>
             #formularz{
                 margin: auto;
