--- a/20250811_wedkarstwo.html
+++ b/20250811_wedkarstwo.html
@@ -22,7 +22,7 @@
     body{background: linear-gradient(180deg,var(--sea1) 0%, var(--sea2) 40%, var(--sea3) 100%);display:flex;align-items:stretch;}
 
     /* --- Game container --- */
-    .game-wrap{width:100%;max-width:900px;margin:auto;height:100vh;position:relative;overflow:hidden;border-left:8px solid rgba(255,255,255,0.03);border-right:8px solid rgba(255,255,255,0.03);}
+    .game-wrap{width:100%;max-width:900px;margin:auto;height:100svh;position:relative;overflow:hidden;border-left:8px solid rgba(255,255,255,0.03);border-right:8px solid rgba(255,255,255,0.03);}
 
     /* subtle waves at top */
     .waves{position:absolute;left:0;right:0;top:0;height:18vh;background:radial-gradient(circle at 20% 20%, rgba(255,255,255,0.06), transparent 20%), radial-gradient(circle at 80% 50%, rgba(255,255,255,0.04), transparent 18%);pointer-events:none}
