--- a/20250813_julka.html
+++ b/20250813_julka.html
@@ -29,7 +29,7 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750326763/kolofortuny2_dmzd1w.png" alt="Koło Fortuny">
                 <span>Koło Fortuny</span>
             </a>
-            <a href="20251130_gry.html" class="app-icon">
+            <a href="https://dawid108.github.io/dawi2026/index.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251558/gry_nxmlim.jpg" alt="Gry">
                 <span>Gry</span>
             </a>
