--- a/20250622_karty.html
+++ b/20250622_karty.html
@@ -84,7 +84,7 @@
     const players = [
       {
         name: "Cristiano Ronaldo",
-        image: "https://res.cloudinary.com/diljpkw9f/image/upload/c_crop,g_auto/v1750622393/Cristiano_Ronaldo-removebg-preview_ybwgag.png",
+        image: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750622393/Cristiano_Ronaldo-removebg-preview_ybwgag.png",
         rating: 110,
         country: "Portugalia",
         clubs: ["Sporting", "Manchester United", "Real Madryt", "Juventus", "Al Nassr Riyadh"]
