--- a/20250617_kosmicznykwadrat.html
+++ b/20250617_kosmicznykwadrat.html
@@ -147,7 +147,7 @@
         // Przeszkody (asteroidy)
         let obstacles = [];
         let lastObstacleSpawnTime = 0;
-        let highScore = localStorage.getItem('kosmicznySmiecHighScore') ? parseInt(localStorage.getItem('kosmicznySmiecHighScore')) : 0;
+        let highScore = localStorage.getItem('samolot') ? parseInt(localStorage.getItem('samolot')) : 0;
 
         // Funkcje rysowania
         function drawShip() {
@@ -268,7 +268,7 @@
             // Aktualizacja rekordu
             if (score > highScore) {
                 highScore = score;
-                localStorage.setItem('kosmicznySmiecHighScore', highScore);
+                localStorage.setItem('samolot', highScore);
             }
 
             // Wyświetlenie ekranu końca gry z wynikami
