--- a/20251228_flagi.html
+++ b/20251228_flagi.html
@@ -4,56 +4,85 @@
 <meta charset="UTF-8">
 <title>Nauka flag – terytoria i państwa</title>
 <style>
+* {
+    box-sizing: border-box;
+}
+
 body {
-    font-family: Arial, sans-serif;
-    background: #f4f6f8;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+    background: linear-gradient(180deg, #eef2f7, #ffffff);
     margin: 0;
-    padding: 20px;
+    padding: 12px;
 }
 
 h1 {
     text-align: center;
-    margin-bottom: 30px;
+    font-size: 22px;
+    margin: 10px 0 20px;
 }
 
 .grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-    gap: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
 }
 
+/* KARTA */
 .card {
     background: white;
-    border-radius: 16px;
-    padding: 20px;
+    border-radius: 20px;
+    padding: 16px;
     text-align: center;
-    box-shadow: 0 6px 15px rgba(0,0,0,0.1);
-    transition: transform 0.2s;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+    transition: transform 0.15s ease, box-shadow 0.15s ease;
 }
 
-.card:hover {
-    transform: scale(1.05);
+/* kliknięcie palcem */
+.card:active {
+    transform: scale(0.97);
+    box-shadow: 0 4px 10px rgba(0,0,0,0.15);
 }
 
+/* FLAGA */
 .flag {
-    font-size: 80px;
+    font-size: 96px;
+    line-height: 1;
     margin-bottom: 10px;
 }
 
+/* NAZWY */
 .pl {
-    font-weight: bold;
+    font-weight: 700;
     font-size: 18px;
 }
 
 .en {
     font-size: 14px;
     color: #555;
+    margin-top: 2px;
 }
 
 .short {
-    margin-top: 6px;
+    margin-top: 8px;
     font-size: 13px;
     color: #888;
+    background: #f1f3f6;
+    padding: 4px 10px;
+    border-radius: 999px;
+    display: inline-block;
+}
+
+/* TABLET / WIĘKSZY EKRAN */
+@media (min-width: 600px) {
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+        gap: 18px;
+    }
+
+    .flag {
+        font-size: 88px;
+    }
 }
 </style>
 </head>
