--- a/20251228_flagi.html
+++ b/20251228_flagi.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Nauka flag – terytoria i państwa</title>
+<script src="script.js"></script>
 <style>
 * {
     box-sizing: border-box;
