--- a/20260103_daty.html
+++ b/20260103_daty.html
@@ -4,74 +4,123 @@
 <meta charset="UTF-8">
 <title>Quiz Historyczny – Daty</title>
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        background: #f2f2f2;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-    }
+:root {
+    --bg: #f4f6f8;
+    --card: #ffffff;
+    --text: #1f2933;
+    --muted: #6b7280;
+    --primary: #2563eb;
+    --danger: #dc2626;
+    --radius: 14px;
+}
 
-    .game-container {
-        background: white;
-        width: 420px;
-        padding: 20px;
-        border-radius: 12px;
-        box-shadow: 0 0 15px rgba(0,0,0,0.15);
-        text-align: center;
-    }
+* {
+    box-sizing: border-box;
+}
 
-    .top-bar {
-        display: flex;
-        justify-content: space-between;
-        font-weight: bold;
-        margin-bottom: 15px;
-    }
+body {
+    margin: 0;
+    background: var(--bg);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+    color: var(--text);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    padding: 16px;
+}
 
-    .event {
-        font-size: 18px;
-        margin-bottom: 15px;
-        min-height: 60px;
-    }
+.game-container {
+    width: 100%;
+    max-width: 420px;
+    background: var(--card);
+    border-radius: var(--radius);
+    padding: 20px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+}
 
-    input {
-        width: 80%;
-        padding: 10px;
-        font-size: 16px;
-        text-align: center;
-    }
+/* TOP BAR */
+.top-bar {
+    display: flex;
+    justify-content: space-between;
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 16px;
+}
 
-    button {
-        margin-top: 15px;
-        padding: 10px 15px;
-        font-size: 16px;
-        cursor: pointer;
-        border-radius: 8px;
-        border: none;
-        background: #2196f3;
-        color: white;
-    }
+.top-bar span {
+    font-weight: 700;
+}
 
-    button:hover {
-        background: #1976d2;
-    }
+/* EVENT */
+.event {
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 1.4;
+    text-align: center;
+    margin-bottom: 20px;
+    min-height: 60px;
+}
 
-    .correct-answer {
-        margin-top: 10px;
-        color: red;
-        font-weight: bold;
-    }
+/* INPUT */
+input {
+    width: 100%;
+    padding: 14px;
+    font-size: 18px;
+    border-radius: var(--radius);
+    border: 2px solid #e5e7eb;
+    text-align: center;
+    outline: none;
+}
 
-    .hidden {
-        display: none;
-    }
+input:focus {
+    border-color: var(--primary);
+}
 
-    .end-screen button {
-        width: 100%;
-        margin-top: 10px;
-    }
+/* CORRECT ANSWER */
+.correct-answer {
+    margin-top: 12px;
+    padding: 10px;
+    border-radius: var(--radius);
+    background: #fee2e2;
+    color: var(--danger);
+    font-weight: 600;
+    text-align: center;
+}
+
+/* END SCREEN */
+.end-screen h2 {
+    margin-top: 0;
+    margin-bottom: 16px;
+}
+
+.end-screen p {
+    font-size: 18px;
+    margin: 8px 0;
+}
+
+/* BUTTONS */
+button {
+    width: 100%;
+    padding: 14px;
+    margin-top: 12px;
+    font-size: 16px;
+    font-weight: 600;
+    border-radius: var(--radius);
+    border: none;
+    cursor: pointer;
+    background: var(--primary);
+    color: white;
+}
+
+button:active {
+    transform: scale(0.98);
+}
+
+/* UTILS */
+.hidden {
+    display: none;
+}
 </style>
 </head>
 <body>
