--- a/20260103_daty.html
+++ b/20260103_daty.html
@@ -2,7 +2,8 @@
 <html lang="pl">
 <head>
 <meta charset="UTF-8">
-<title>Quiz Historyczny – Daty</title>
+<title>Daty</title>
+<script src="script.js"></script>
 <style>
 :root {
     --bg: #f4f6f8;
