--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -63,7 +63,9 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
-<tr><td></td><td><a href="20251210_historia.html">Historia</a></td></tr>
+<tr><td></td><td><a href="20260112_historia2.html">Historia 5</a></td></tr>
+<tr><td></td><td><a href="20260112_historia.html">Historia 4</a></td></tr>
+<tr><td></td><td><a href="20251210_historia.html">Historia 3</a></td></tr>
 <tr><td></td><td><a href="20251207_pozytywizm.html">Pozytywizm</a></td></tr>
 <tr><td></td><td><a href="20251208_rodion.html">Rodion Raskolnikow</a></td></tr>
 <tr><td></td><td><a href="20251207_zbrodnia.html">Zbrodnia i Kara</a></td></tr>
@@ -78,7 +80,7 @@
 <tr><td></td><td><a href="20251130_niemiecki.html">Język Niemiecki</a></td></tr>
 <tr><td></td><td><a href="20251130_angielski.html">Język Angielski</a></td></tr>
 <tr><td></td><td><a href="20251127_mastermind.html">Mastermind</a></td></tr>
-<tr><td></td><td><a href="20251126_historia.html">Historia</a></td></tr>
+<tr><td></td><td><a href="20251126_historia.html">Historia 2</a></td></tr>
 <tr><td></td><td><a href="20251118_biologia.html">Biologia</a></td></tr>
 <tr><td></td><td><a href="20251110_haslo.html">Hasło</a></td></tr>
 <tr><td></td><td><a href="20251110_samochody.html">Samochody 2</a></td></tr>
