--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -18,6 +18,23 @@
 <body>
     <div class="container">
         <h1 id="punkty"></h1>
+        <h2>Testy</h2>
+        <div class="table-wrapper">
+            <table border="1">
+<tr><td></td><td><a href="20260115_biologia.html">Biologia 2</a></td></tr>
+<tr><td></td><td><a href="20260112_historia2.html">Historia 5</a></td></tr>
+<tr><td></td><td><a href="20260112_historia.html">Historia 4</a></td></tr>
+<tr><td></td><td><a href="20251210_historia.html">Historia 3</a></td></tr>
+<tr><td></td><td><a href="20251207_pozytywizm.html">Pozytywizm</a></td></tr>
+<tr><td></td><td><a href="20251208_rodion.html">Rodion Raskolnikow</a></td></tr>
+<tr><td></td><td><a href="20251207_zbrodnia.html">Zbrodnia i Kara</a></td></tr>
+<tr><td></td><td><a href="20251207_gloria.html">Gloria Victis</a></td></tr>
+<tr><td></td><td><a href="20251207_potop.html">Potop</a></td></tr>
+<tr><td></td><td><a href="20251207_lalka.html">Lalka</a></td></tr>
+<tr><td></td><td><a href="20251207_mendel.html">Mendel Gdański</a></td></tr>
+<tr><td></td><td><a href="20251207_pojecia.html">Pojęcia</a></td></tr>
+            </table>
+        </div>
         <h2>Egzaminy</h2>
         <div class="table-wrapper">
             <table border="1">
@@ -63,17 +80,6 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
-<tr><td></td><td><a href="20260112_historia2.html">Historia 5</a></td></tr>
-<tr><td></td><td><a href="20260112_historia.html">Historia 4</a></td></tr>
-<tr><td></td><td><a href="20251210_historia.html">Historia 3</a></td></tr>
-<tr><td></td><td><a href="20251207_pozytywizm.html">Pozytywizm</a></td></tr>
-<tr><td></td><td><a href="20251208_rodion.html">Rodion Raskolnikow</a></td></tr>
-<tr><td></td><td><a href="20251207_zbrodnia.html">Zbrodnia i Kara</a></td></tr>
-<tr><td></td><td><a href="20251207_gloria.html">Gloria Victis</a></td></tr>
-<tr><td></td><td><a href="20251207_potop.html">Potop</a></td></tr>
-<tr><td></td><td><a href="20251207_lalka.html">Lalka</a></td></tr>
-<tr><td></td><td><a href="20251207_mendel.html">Mendel Gdański</a></td></tr>
-<tr><td></td><td><a href="20251207_pojecia.html">Pojęcia</a></td></tr>
 <tr><td></td><td><a href="20251204_zapytania.html">Zapytania</a></td></tr>
 <tr><td></td><td><a href="20251203_egzamin.html">Egzamin</a></td></tr>
 <tr><td></td><td><a href="20251202_geografia.html">Geografia</a></td></tr>
