--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -21,7 +21,8 @@
         <h2>Testy</h2>
         <div class="table-wrapper">
             <table border="1">
-<tr><td></td><td><a href="20260115_biologia.html">Biologia 2</a></td></tr>
+<tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20260114_biologia.html">Biologia 2</a></td></tr>
 <tr><td></td><td><a href="20260112_historia2.html">Historia 5</a></td></tr>
 <tr><td></td><td><a href="20260112_historia.html">Historia 4</a></td></tr>
 <tr><td></td><td><a href="20251210_historia.html">Historia 3</a></td></tr>
