--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -40,6 +40,7 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20260121_rejestracja.html">Sklep</a></td></tr>
 <tr><td></td><td><a href="20251123_rejestracja.html">Tulipany</a></td></tr>
 <tr><td></td><td><a href="20251118_pracownicy.html">Nasz zespół</a></td></tr>
 <tr><td></td><td><a href="20251106_index.html">Fryzjerstwo</a></td></tr>
