--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -22,6 +22,12 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20260126_zbrodnia.html">Zbrodnia i Kara 2</a></td></tr>
+<tr><td></td><td><a href="20260126_petersburg.html">Petersburg</a></td></tr>
+<tr><td></td><td><a href="20260126_cechy.html">Cechy Gatunkowe</a></td></tr>
+<tr><td></td><td><a href="20260126_sonia.html">Sonia Marmieładow</a></td></tr>
+<tr><td></td><td><a href="20260126_rodion.html">Rodion Raskolnikow 2</a></td></tr>
+<tr><td></td><td><a href="20260126_tytul.html">Tytuł</a></td></tr>
 <tr><td></td><td><a href="20260114_biologia.html">Biologia 2</a></td></tr>
 <tr><td></td><td><a href="20260112_historia2.html">Historia 5</a></td></tr>
 <tr><td></td><td><a href="20260112_historia.html">Historia 4</a></td></tr>
