--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -88,6 +88,7 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20260126_notatka.html">Notatka Zbrodnia i Kara</a></td></tr>
 <tr><td></td><td><a href="20251204_zapytania.html">Zapytania</a></td></tr>
 <tr><td></td><td><a href="20251203_egzamin.html">Egzamin</a></td></tr>
 <tr><td></td><td><a href="20251202_geografia.html">Geografia</a></td></tr>
